tests/reference/asr-type_dim_01-34f98ab.stderr
semantic error: Variable `n` cannot appear in the expression
 --> tests/errors/type_dim_01.f90:7:7
  |
7 |       integer :: elements(n)
  |       ^^^^^^^^^^^^^^^^^^^^^^ 
